# opencv-demo

./: CMakeLists.txt  README.md  main.cpp
